# model-bot-api

./: README.md  pyproject.toml
src/: api.py
src/helpers/: process_files.py
src/spec/: process_files.py  result.py
